// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`simulation fixtures: 1 PC vs 1 enemy (parity with v0.5.0 pair detail) > produces a stable result with focus-fire and fixed seed 1`] = `
{
  "anyPcDownProbability": 0.89,
  "iterationsCompleted": 1000,
  "perEnemy": [
    {
      "damageShare": 0.3752542372881356,
      "id": "troll",
      "name": "troll",
      "topTargetId": "mira",
    },
  ],
  "perPc": [
    {
      "deathProbability": 0.016,
      "downProbability": 0.89,
      "id": "mira",
      "meanEndingHp": 0.967,
      "name": "mira",
      "topContributingEnemyId": "troll",
    },
  ],
  "tpkProbability": 0.89,
}
`;

exports[`simulation fixtures: 4 PCs vs 1 boss > is stable under boss-cinematic 1`] = `
{
  "anyPcDownProbability": 0.925,
  "meanFirstDownRound": 1.2875675675675675,
  "medianFirstDownRound": 1,
  "perEnemy": [
    {
      "damageShare": 0.38488225106778706,
      "id": "boss",
      "name": "boss",
      "topTargetId": "elya",
    },
  ],
  "perPc": [
    {
      "deathProbability": 0.05,
      "downProbability": 0.525,
      "id": "mira",
      "meanEndingHp": 8.865,
      "name": "mira",
      "topContributingEnemyId": "boss",
    },
    {
      "deathProbability": 0.032,
      "downProbability": 0.392,
      "id": "seam",
      "meanEndingHp": 13.39,
      "name": "seam",
      "topContributingEnemyId": "boss",
    },
    {
      "deathProbability": 0.077,
      "downProbability": 0.725,
      "id": "jor",
      "meanEndingHp": 3.024,
      "name": "jor",
      "topContributingEnemyId": "boss",
    },
    {
      "deathProbability": 0.098,
      "downProbability": 0.754,
      "id": "elya",
      "meanEndingHp": 1.605,
      "name": "elya",
      "topContributingEnemyId": "boss",
    },
  ],
  "profile": "boss-cinematic",
  "tpkProbability": 0.318,
}
`;

exports[`simulation fixtures: 4 PCs vs 1 boss > is stable under focus-fire 1`] = `
{
  "anyPcDownProbability": 0.951,
  "meanFirstDownRound": 1.31335436382755,
  "medianFirstDownRound": 1,
  "perEnemy": [
    {
      "damageShare": 0.36133976395297607,
      "id": "boss",
      "name": "boss",
      "topTargetId": "elya",
    },
  ],
  "perPc": [
    {
      "deathProbability": 0.054,
      "downProbability": 0.466,
      "id": "mira",
      "meanEndingHp": 11.781,
      "name": "mira",
      "topContributingEnemyId": "boss",
    },
    {
      "deathProbability": 0.016,
      "downProbability": 0.295,
      "id": "seam",
      "meanEndingHp": 16.025,
      "name": "seam",
      "topContributingEnemyId": "boss",
    },
    {
      "deathProbability": 0.079,
      "downProbability": 0.722,
      "id": "jor",
      "meanEndingHp": 5.428,
      "name": "jor",
      "topContributingEnemyId": "boss",
    },
    {
      "deathProbability": 0.114,
      "downProbability": 0.951,
      "id": "elya",
      "meanEndingHp": 0.432,
      "name": "elya",
      "topContributingEnemyId": "boss",
    },
  ],
  "profile": "focus-fire",
  "tpkProbability": 0.295,
}
`;

exports[`simulation fixtures: 4 PCs vs 1 boss > is stable under predator 1`] = `
{
  "anyPcDownProbability": 0.957,
  "meanFirstDownRound": 1.28944618599791,
  "medianFirstDownRound": 1,
  "perEnemy": [
    {
      "damageShare": 0.37020673510021174,
      "id": "boss",
      "name": "boss",
      "topTargetId": "elya",
    },
  ],
  "perPc": [
    {
      "deathProbability": 0.043,
      "downProbability": 0.495,
      "id": "mira",
      "meanEndingHp": 11.098,
      "name": "mira",
      "topContributingEnemyId": "boss",
    },
    {
      "deathProbability": 0.02,
      "downProbability": 0.316,
      "id": "seam",
      "meanEndingHp": 15.59,
      "name": "seam",
      "topContributingEnemyId": "boss",
    },
    {
      "deathProbability": 0.077,
      "downProbability": 0.76,
      "id": "jor",
      "meanEndingHp": 4.429,
      "name": "jor",
      "topContributingEnemyId": "boss",
    },
    {
      "deathProbability": 0.113,
      "downProbability": 0.957,
      "id": "elya",
      "meanEndingHp": 0.363,
      "name": "elya",
      "topContributingEnemyId": "boss",
    },
  ],
  "profile": "predator",
  "tpkProbability": 0.316,
}
`;

exports[`simulation fixtures: 4 PCs vs 1 boss > is stable under random-legal 1`] = `
{
  "anyPcDownProbability": 0.896,
  "meanFirstDownRound": 1.4352678571428572,
  "medianFirstDownRound": 1,
  "perEnemy": [
    {
      "damageShare": 0.40075908551467787,
      "id": "boss",
      "name": "boss",
      "topTargetId": "jor",
    },
  ],
  "perPc": [
    {
      "deathProbability": 0.022,
      "downProbability": 0.596,
      "id": "mira",
      "meanEndingHp": 6.316,
      "name": "mira",
      "topContributingEnemyId": "boss",
    },
    {
      "deathProbability": 0.023,
      "downProbability": 0.603,
      "id": "seam",
      "meanEndingHp": 6.118,
      "name": "seam",
      "topContributingEnemyId": "boss",
    },
    {
      "deathProbability": 0.029,
      "downProbability": 0.607,
      "id": "jor",
      "meanEndingHp": 5.907,
      "name": "jor",
      "topContributingEnemyId": "boss",
    },
    {
      "deathProbability": 0.025,
      "downProbability": 0.614,
      "id": "elya",
      "meanEndingHp": 6.069,
      "name": "elya",
      "topContributingEnemyId": "boss",
    },
  ],
  "profile": "random-legal",
  "tpkProbability": 0.369,
}
`;

exports[`simulation fixtures: 4 PCs vs 1 boss > is stable under spread-damage 1`] = `
{
  "anyPcDownProbability": 0.838,
  "meanFirstDownRound": 1.467780429594272,
  "medianFirstDownRound": 1,
  "perEnemy": [
    {
      "damageShare": 0.41357957216094793,
      "id": "boss",
      "name": "boss",
      "topTargetId": "elya",
    },
  ],
  "perPc": [
    {
      "deathProbability": 0.006,
      "downProbability": 0.563,
      "id": "mira",
      "meanEndingHp": 5.587,
      "name": "mira",
      "topContributingEnemyId": "boss",
    },
    {
      "deathProbability": 0.011,
      "downProbability": 0.474,
      "id": "seam",
      "meanEndingHp": 8.584,
      "name": "seam",
      "topContributingEnemyId": "boss",
    },
    {
      "deathProbability": 0.006,
      "downProbability": 0.588,
      "id": "jor",
      "meanEndingHp": 3.529,
      "name": "jor",
      "topContributingEnemyId": "boss",
    },
    {
      "deathProbability": 0.013,
      "downProbability": 0.634,
      "id": "elya",
      "meanEndingHp": 2.629,
      "name": "elya",
      "topContributingEnemyId": "boss",
    },
  ],
  "profile": "spread-damage",
  "tpkProbability": 0.372,
}
`;

exports[`simulation fixtures: 4 PCs vs 4 minions > is stable under boss-cinematic 1`] = `
{
  "anyPcDownProbability": 0.311,
  "perEnemy": [
    {
      "damageShare": 0.016817090482115632,
      "id": "mook-1",
      "name": "mook-1",
      "topTargetId": "elya",
    },
    {
      "damageShare": 0.037766600655438916,
      "id": "mook-2",
      "name": "mook-2",
      "topTargetId": "elya",
    },
    {
      "damageShare": 0.05909114806960972,
      "id": "mook-3",
      "name": "mook-3",
      "topTargetId": "mira",
    },
    {
      "damageShare": 0.07930109882406547,
      "id": "mook-4",
      "name": "mook-4",
      "topTargetId": "seam",
    },
  ],
  "perPc": [
    {
      "deathProbability": 0.002,
      "downProbability": 0.13,
      "id": "mira",
      "meanEndingHp": 10.213,
      "name": "mira",
      "topContributingEnemyId": "mook-4",
    },
    {
      "deathProbability": 0,
      "downProbability": 0.113,
      "id": "seam",
      "meanEndingHp": 11.414,
      "name": "seam",
      "topContributingEnemyId": "mook-4",
    },
    {
      "deathProbability": 0.003,
      "downProbability": 0.121,
      "id": "jor",
      "meanEndingHp": 10.04,
      "name": "jor",
      "topContributingEnemyId": "mook-4",
    },
    {
      "deathProbability": 0.005,
      "downProbability": 0.15,
      "id": "elya",
      "meanEndingHp": 9.276,
      "name": "elya",
      "topContributingEnemyId": "mook-4",
    },
  ],
  "profile": "boss-cinematic",
  "tpkProbability": 0.03,
}
`;

exports[`simulation fixtures: 4 PCs vs 4 minions > is stable under focus-fire 1`] = `
{
  "anyPcDownProbability": 0.924,
  "perEnemy": [
    {
      "damageShare": 0.016651186688536254,
      "id": "mook-1",
      "name": "mook-1",
      "topTargetId": "elya",
    },
    {
      "damageShare": 0.044040867142264295,
      "id": "mook-2",
      "name": "mook-2",
      "topTargetId": "elya",
    },
    {
      "damageShare": 0.07183368574985673,
      "id": "mook-3",
      "name": "mook-3",
      "topTargetId": "elya",
    },
    {
      "damageShare": 0.08518467284548346,
      "id": "mook-4",
      "name": "mook-4",
      "topTargetId": "jor",
    },
  ],
  "perPc": [
    {
      "deathProbability": 0.003,
      "downProbability": 0.275,
      "id": "mira",
      "meanEndingHp": 14.16,
      "name": "mira",
      "topContributingEnemyId": "mook-4",
    },
    {
      "deathProbability": 0.002,
      "downProbability": 0.076,
      "id": "seam",
      "meanEndingHp": 20.785,
      "name": "seam",
      "topContributingEnemyId": "mook-4",
    },
    {
      "deathProbability": 0.006,
      "downProbability": 0.638,
      "id": "jor",
      "meanEndingHp": 5.404,
      "name": "jor",
      "topContributingEnemyId": "mook-4",
    },
    {
      "deathProbability": 0.034,
      "downProbability": 0.924,
      "id": "elya",
      "meanEndingHp": 0.567,
      "name": "elya",
      "topContributingEnemyId": "mook-3",
    },
  ],
  "profile": "focus-fire",
  "tpkProbability": 0.076,
}
`;

exports[`simulation fixtures: 4 PCs vs 4 minions > is stable under predator 1`] = `
{
  "anyPcDownProbability": 0.928,
  "perEnemy": [
    {
      "damageShare": 0.016706293843705172,
      "id": "mook-1",
      "name": "mook-1",
      "topTargetId": "elya",
    },
    {
      "damageShare": 0.04297812972824271,
      "id": "mook-2",
      "name": "mook-2",
      "topTargetId": "elya",
    },
    {
      "damageShare": 0.06991413019983887,
      "id": "mook-3",
      "name": "mook-3",
      "topTargetId": "elya",
    },
    {
      "damageShare": 0.08421528364543829,
      "id": "mook-4",
      "name": "mook-4",
      "topTargetId": "jor",
    },
  ],
  "perPc": [
    {
      "deathProbability": 0.004,
      "downProbability": 0.263,
      "id": "mira",
      "meanEndingHp": 14.383,
      "name": "mira",
      "topContributingEnemyId": "mook-4",
    },
    {
      "deathProbability": 0.002,
      "downProbability": 0.063,
      "id": "seam",
      "meanEndingHp": 21.256,
      "name": "seam",
      "topContributingEnemyId": "mook-4",
    },
    {
      "deathProbability": 0.014,
      "downProbability": 0.615,
      "id": "jor",
      "meanEndingHp": 5.411,
      "name": "jor",
      "topContributingEnemyId": "mook-4",
    },
    {
      "deathProbability": 0.026,
      "downProbability": 0.928,
      "id": "elya",
      "meanEndingHp": 0.544,
      "name": "elya",
      "topContributingEnemyId": "mook-4",
    },
  ],
  "profile": "predator",
  "tpkProbability": 0.063,
}
`;

exports[`simulation fixtures: 4 PCs vs 4 minions > is stable under random-legal 1`] = `
{
  "anyPcDownProbability": 0.558,
  "perEnemy": [
    {
      "damageShare": 0.017225701794586417,
      "id": "mook-1",
      "name": "mook-1",
      "topTargetId": "mira",
    },
    {
      "damageShare": 0.03963802748255971,
      "id": "mook-2",
      "name": "mook-2",
      "topTargetId": "seam",
    },
    {
      "damageShare": 0.061406571663429575,
      "id": "mook-3",
      "name": "mook-3",
      "topTargetId": "mira",
    },
    {
      "damageShare": 0.07841767962231484,
      "id": "mook-4",
      "name": "mook-4",
      "topTargetId": "elya",
    },
  ],
  "perPc": [
    {
      "deathProbability": 0.002,
      "downProbability": 0.262,
      "id": "mira",
      "meanEndingHp": 10.155,
      "name": "mira",
      "topContributingEnemyId": "mook-4",
    },
    {
      "deathProbability": 0.003,
      "downProbability": 0.245,
      "id": "seam",
      "meanEndingHp": 10.507,
      "name": "seam",
      "topContributingEnemyId": "mook-4",
    },
    {
      "deathProbability": 0.002,
      "downProbability": 0.235,
      "id": "jor",
      "meanEndingHp": 10.734,
      "name": "jor",
      "topContributingEnemyId": "mook-4",
    },
    {
      "deathProbability": 0.001,
      "downProbability": 0.244,
      "id": "elya",
      "meanEndingHp": 10.527,
      "name": "elya",
      "topContributingEnemyId": "mook-4",
    },
  ],
  "profile": "random-legal",
  "tpkProbability": 0.05,
}
`;

exports[`simulation fixtures: 4 PCs vs 4 minions > is stable under spread-damage 1`] = `
{
  "anyPcDownProbability": 0.251,
  "perEnemy": [
    {
      "damageShare": 0.01725531455327095,
      "id": "mook-1",
      "name": "mook-1",
      "topTargetId": "elya",
    },
    {
      "damageShare": 0.03837417520780931,
      "id": "mook-2",
      "name": "mook-2",
      "topTargetId": "elya",
    },
    {
      "damageShare": 0.05819009064875524,
      "id": "mook-3",
      "name": "mook-3",
      "topTargetId": "jor",
    },
    {
      "damageShare": 0.07791542701068137,
      "id": "mook-4",
      "name": "mook-4",
      "topTargetId": "seam",
    },
  ],
  "perPc": [
    {
      "deathProbability": 0.001,
      "downProbability": 0.104,
      "id": "mira",
      "meanEndingHp": 10.18,
      "name": "mira",
      "topContributingEnemyId": "mook-4",
    },
    {
      "deathProbability": 0.003,
      "downProbability": 0.09,
      "id": "seam",
      "meanEndingHp": 11.546,
      "name": "seam",
      "topContributingEnemyId": "mook-4",
    },
    {
      "deathProbability": 0.001,
      "downProbability": 0.131,
      "id": "jor",
      "meanEndingHp": 9.826,
      "name": "jor",
      "topContributingEnemyId": "mook-4",
    },
    {
      "deathProbability": 0.001,
      "downProbability": 0.132,
      "id": "elya",
      "meanEndingHp": 9.412,
      "name": "elya",
      "topContributingEnemyId": "mook-4",
    },
  ],
  "profile": "spread-damage",
  "tpkProbability": 0.032,
}
`;

exports[`simulation fixtures: degenerate setups > TPK setup converges to high any-PC-down and TPK 1`] = `
{
  "anyPcDownProbability": 0.978,
  "meanFirstDownRound": 1,
  "tpkProbability": 0.968,
}
`;

exports[`simulation fixtures: degenerate setups > safe setup converges to near-zero down risk 1`] = `
{
  "anyPcDownProbability": 0,
  "tpkProbability": 0,
}
`;
